# EPC_Project_3_10_9

./: README.md
EPC_Project_3_10_9/: pyproject.toml
EPC_Project_3_10_9/epc-project/: README.md  pyproject.toml
EPC_Project_3_10_9/epc-project/conf/base/: logging.yml
EPC_Project_3_10_9/epc-project/docs/source/: conf.py  index.rst
EPC_Project_3_10_9/epc-project/src/: requirements.txt  setup.py
EPC_Project_3_10_9/epc-project/src/epc_project/: __init__.py  __main__.py  settings.py
EPC_Project_3_10_9/epc-project/src/epc_project/pipelines/data_processing/: nodes.py  pipeline.py
EPC_Project_3_10_9/epc-project/src/tests/: test_run.py
