[tool.poetry]
name = "epc-project-3-10-9"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "epc_project_3_10_9"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
black = ">=22.0,<23.0"
flake8 = ">=3.7.9,<5.0"
ipython = {version = ">=8.10,<9.0", markers = "python_version >= \"3.8\""}
isort = ">=5.0,<6.0"
jupyter = ">=1.0,<2.0"
jupyterlab-server = ">=2.11.1,<2.16.0"
jupyterlab = ">=3.0,<3.6.0"
kedro = "0.18.6"
kedro-telemetry = ">=0.2.0,<0.3.0"
nbstripout = ">=0.4,<1.0"
pytest-cov = ">=3.0,<4.0"
pytest-mock = ">=1.7.1,<2.0"
pytest = ">=7.2,<8.0"
kedro-datasets = {version = ">=1.0.2,<1.1.0", extras = ["pandas-csvdataset", "pandas-exceldataset", "pandas-parquetdataset"]}
kedro-viz = ">=5.0,<6.0"
scikit-learn = ">=1.0,<2.0"



[tool.poetry.group.dev.dependencies]
kedro = "^0.18.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
